Cycles: From Dupli fails on Grid particles #48928

Closed
opened 2016-07-22 13:27:26 +02:00 by Leon Cheung · 9 comments
Member

System Information
Win8 64bit | GTX680

Blender Version
Broken: 2.77a Official Release (abf6f08)

Short description of error
From Dupli feature for Texture Coordinate and UV Map node failed to work with grid distribuated particles.

uv.png

Exact steps for others to reproduce the error

grid.gif

particle_grid_dupli.blend

**System Information** Win8 64bit | GTX680 **Blender Version** Broken: 2.77a Official Release (abf6f08) **Short description of error** From Dupli feature for Texture Coordinate and UV Map node failed to work with grid distribuated particles. ![uv.png](https://archive.blender.org/developer/F327207/uv.png) **Exact steps for others to reproduce the error** ![grid.gif](https://archive.blender.org/developer/F327209/grid.gif) [particle_grid_dupli.blend](https://archive.blender.org/developer/F327213/particle_grid_dupli.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @angavrilov

Added subscriber: @angavrilov

The issue is reproducible, but the cause seems to be that computing UV for grid distribution is not implemented at all (no valid binding to faces in particle data), and thus returns nonsense. Since particles are going to be significantly reworked in 2.8, this will probably go on TODO.

The issue is reproducible, but the cause seems to be that computing UV for grid distribution is not implemented at all (no valid binding to faces in particle data), and thus returns nonsense. Since particles are going to be significantly reworked in 2.8, this will probably go on TODO.

Added subscriber: @brecht

Added subscriber: @brecht

I wouldn't even consider UVs for grid distribution a TODO item in the sense that's a bug we need to fix eventually, points within the volume don't clearly correspond to an point on the surface.

I would expect the UV to be zero for all particles though, instead of these seemingly random coordinates there are now. But either way feel free to handle this report as you see fit.

I wouldn't even consider UVs for grid distribution a TODO item in the sense that's a bug we need to fix eventually, points within the volume don't clearly correspond to an point on the surface. I would expect the UV to be zero for all particles though, instead of these seemingly random coordinates there are now. But either way feel free to handle this report as you see fit.

What seems to happen now is basically that it uses the field intended for barycentric on-face coordinates for uv interpolation to store orco, and doesn't set face index. The code returning uv then doesn't check that it's grid mode and applies those coodinates to face 0. Adding a check to return black shouldn't be too hard I expect.

Potentially in grid + emit from faces mode it could bind to the nearest point on the nearest face, but that would require substantial code changes and thus is definitely not for 2.78.

What seems to happen now is basically that it uses the field intended for barycentric on-face coordinates for uv interpolation to store orco, and doesn't set face index. The code returning uv then doesn't check that it's grid mode and applies those coodinates to face 0. Adding a check to return black shouldn't be too hard I expect. Potentially in grid + emit from faces mode it could bind to the nearest point on the nearest face, but that would require substantial code changes and thus is definitely not for 2.78.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Alexander Gavrilov self-assigned this 2016-08-09 16:59:31 +02:00

Added to TODO wiki page, so I think this can be archived.

Added to [TODO ](https://wiki.blender.org/index.php/Dev:Source/Development/Todo/Tools#Particles) wiki page, so I think this can be archived.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48928
No description provided.